updated swagger yaml
